# VirtualPersitantAutonomousWorld

./: .gitignore  CMakeLists.txt  MapGenerator.cs  README.md  TUTOEP10.unitypackage  TUTOESSAI.unitypackage  install.sh
2eme affichage/: Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Assembly-UnityScript-Editor.unityproj  Assembly-UnityScript.unityproj  Procedural Landmass Generation.sln  Procedural Landmass Generation.userprefs  colormap2.txt
2eme affichage/Assets/: New Terrain.asset
2eme affichage/ProjectSettings/: ProjectSettings.asset
CodeGrpIA/: .gitignore  Doxyfile  Makefile  listesource  readme_install_msgpack.txt
CodeGrpIA/data/: descriptionCharacteristics.txt  nameListFemale.txt
CodeGrpIA/includes/: Action.hpp  ActionComportement.hpp  ActionSimple.hpp  Agent.hpp  Animal.hpp  Arete.hpp  Arrete.hpp  Building.hpp  Characteristics.hpp  Comportement.hpp  Entity.hpp  Factories.hpp  FonctionAction.hpp  FonctionCondition.hpp  FonctionEnums.hpp  FunctionCondition.hpp  Includes.hpp  Insentient_Entity.hpp  Intangible_Entity.hpp  Item.hpp  Noeud.hpp  Position.hpp  Resource.hpp  Sentient_Entity.hpp  Tangible_Entity.hpp  Tools.hpp  Tribe.hpp  Triple.hpp
CodeGrpIA/nbproject/: configurations.xml  project.xml
CodeGrpIA/src/: Action.cpp  ActionComportement.cpp  ActionSimple.cpp  Agent.cpp  Animal.cpp  Arete.cpp  Arrete.cpp  Building.cpp  Characteristics.cpp  Comportement.cpp  Entity.cpp  FonctionAction.cpp  FonctionCondition.cpp  FonctionEnums.cpp  FunctionCondition.cpp  Insentient_Entity.cpp  Intangible_Entity.cpp  Item.cpp  Main.cpp  Noeud.cpp  Position.cpp  Resource.cpp  Sentient_Entity.cpp  Tangible_Entity.cpp  Tools.cpp  Tribe.cpp  Triple.cpp  Vector3.cpp
Derniere_version/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Derniere_version-csharp.sln  Derniere_version.sln  affichage_ffta_alpha.sln  test_map.map
Derniere_version/Assets/: EndlessTerrain.cs  Map.cs  MapGenerator.cs  MeshGenerator.cs  TextureGenerator.cs  scene1.unity  tarantino.cs  zoom.cs
Derniere_version/ProjectSettings/: ProjectSettings.asset
ProjetInterfaceMif39/: Assembly-CSharp.csproj  Mif39_09Mai_FusionInterface.unitypackage  Mif39finSemaineIntensifFusionGroupeInterface.CSharp.csproj  ProjetInterfaceMif39.CSharp.csproj  ProjetInterfaceMif39.sln
ProjetInterfaceMif39/Assets/: popup.unity
ProjetInterfaceMif39/ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
ProjetInterfaceMif39/Temp/: UnityTempFile-4bdd7619aeef41b4b87a7d94f142d0d3  UnityTempFile-896e10829ccddf04daa684aecb893898  UnityTempFile-8d5a169c803c14e4e84e367394d20925  UnityTempFile-97cf756cffd8564428c0f721fe3ef6d9  UnityTempFile-a4f4f0b980606f645b2f9c29f8bac8bc  (+8 more)
affichage_ffta_alpha/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-firstpass.csproj  Assembly-CSharp-vs.csproj  Tutow2-csharp.sln  affichage_ffta_alpha-csharp.sln  affichage_ffta_alpha.CSharp.Editor.csproj  affichage_ffta_alpha.CSharp.Plugins.csproj  affichage_ffta_alpha.CSharp.csproj  affichage_ffta_alpha.sln
affichage_ffta_joli_mais_casse/: Assembly-CSharp-Editor-vs.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp-vs.csproj  Assembly-CSharp.csproj  Tutow2.sln  Tutow2.userprefs  Tutow3-csharp.sln  Tutow3.sln  affichage_ffta_alpha-csharp.sln  affichage_ffta_alpha.sln  affichage_ffta_alpha_super_light-csharp.sln  affichage_ffta_alpha_super_light.sln  affichage_ffta_alpha_super_light.userprefs  affichage_ffta_joli_mais_casse-csharp.sln  affichage_ffta_joli_mais_casse.sln  biomesdequalitay.tga  grass.tga
client/: README  TCPConnection.cs  socketScript.cs
data/: Characteristics_Agent.json  Characteristics_Animal.json  Characteristics_Building.json  Characteristics_Item.json  Characteristics_Resource.json  Characteristics_Tribe.json  Interface_popups.txt  behavior.json  behavior_test.json  bigmap.json  comportementTest.json  descriptionCharacteristics.json  descriptionCharacteristics.txt  descriptionItems.json  descriptionItems.txt  map.json  mapTest.txt  nameListFemale.json  nameListFemale.txt  nameListMale.json  nameListMale.txt
doc/: Doxyfile
includes/: Facade.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  NetworkAdapter.cpp  NetworkAdapter.hpp  UdpBroadcaster.cpp  foo.cpp  foo.hpp  main.cpp  sqliteInterface.hpp
src/db/: AuthenticationModule.cpp  AuthenticationUser.cpp  AuthenticationUser.hpp  sqliteInterface.cpp  sqliteInterface.hpp  user.db
src/ia/: Facade.cpp
src/ia/Behavior/: Action.cpp  ActionComportement.cpp  ActionSimple.cpp  Arete.cpp  Comportement.cpp  EtatEnum.cpp  FonctionEnums.cpp  Noeud.cpp
src/ia/Entity/: Characteristics.cpp  Entity.cpp  Insentient_Entity.cpp  Intangible_Entity.cpp  Item.cpp  Sentient_Entity.cpp  Tangible_Entity.cpp  Tribe.cpp
src/ia/Tools/: Astar.cpp  Factories.cpp  Position.cpp  Tools.cpp  Vector3.cpp
src/logging/: Logger.cpp  Logger.hpp
src/message/: WorldChangeMessage.hpp
src/reseau/: AuthenticationModule.cpp  Client.cpp  Client.hpp  MessageSender.cpp  NetworkAdapter.cpp  NetworkAdapter.hpp  NetworkManager.cpp  UdpBroadcaster.hpp  WorldChangesListener.cpp  WorldChangesListener.hpp
src/reseau/message/: Message.cpp  WorldChangeMessage.cpp
src/server/: ClientDataHolder.cpp  ClientDataHolder.hpp  WorldSimulator.cpp  WorldSimulator.hpp
src/tool/: CommandLineOptions.cpp  CommandLineOptions.hpp  StringTool.cpp  cJSON.cpp  characteristic.cpp  parser.cpp  pugixml.cpp
src/tools/: CommandLineOptions.cpp
test/: CMakeLists.txt  test_foo.cpp  test_socket.cpp
test/db/: CMakeLists.txt
test/ia/: CMakeLists.txt  test_ia.cpp  test_ia_agent.cpp  test_ia_comportement.cpp  test_ia_entity.cpp  test_ia_facade.cpp  test_ia_fichier.cpp  test_ia_getComportement.cpp  test_ia_item.cpp  test_ia_pathfinding.cpp  test_ia_tribe.cpp  test_import_files.cpp  test_simulation.cpp  test_tojson.cpp  test_tools.cpp
test/logging/: CMakeLists.txt  test_logger.cpp
test/reseau/: CMakeLists.txt  test_socket.cpp
test/server/: test_ClientDataHolder.cpp  test_WorldSimulator.cpp
(+227 files in other folders)
